--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="contents">
         
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/IkaFitrianingsih/ikafitrianingsih.github.io/master/1.jpg">
-          <h2><a href="https://www.dior.com/en_int" title="DIOR">DIOR</a></h2><br>
+          <img src="https://raw.githubusercontent.com/Delvira18610042/Delvira-Salsabilla-Milania/master/dadar%20gulung%20pisang.jpg">
+          <h2><a href="https://cookpad.com/id/resep/6524318-dadar-gulung-pisang-coklat" title="Dadar Gulung Pisang">Dadar Gulung Pisang</a></h2><br>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/IkaFitrianingsih/ikafitrianingsih.github.io/master/44.jpg">
