--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <div class="main">
       <div class="copy-container">
-        <h2><marquee behavior="alternate">JASA TITIP TERPERCAYA</marquee></h2>
-        <h2>Fashionable and Stylish With Us</h2>
+        <h2><marquee behavior="alternate">Resep Olahan Pisang</marquee></h2>
+        <h2>Delvi's Cooking</h2>
       </div>
       
       <div class="contents">
@@ -30,16 +30,16 @@
           <h2><a href="https://cookpad.com/id/resep/6524318-dadar-gulung-pisang-coklat" title="Dadar Gulung Pisang">Dadar Gulung Pisang</a></h2><br>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/IkaFitrianingsih/ikafitrianingsih.github.io/master/44.jpg">
-          <h2><a href="https://www.gucci.com/" title="GUCCI">GUCCI</a></h2><br>
+          <img src="https://raw.githubusercontent.com/Delvira18610042/Delvira-Salsabilla-Milania/master/nugget%20pisang.jpg">
+          <h2><a href="https://cookpad.com/id/resep/3499314-pisang-crispy-nugget-pisang" title="Nugget Pisang">Nugget Pisang</a></h2><br>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/IkaFitrianingsih/ikafitrianingsih.github.io/master/22.jpg">
-          <h2><a href="https://www.chanel.com/my/" title="CHANEL">CHANEL</a></h2><br>
+          <img src="https://raw.githubusercontent.com/Delvira18610042/Delvira-Salsabilla-Milania/master/pisang%20goreng.jpg">
+          <h2><a href="https://www.piknikdong.com/resep-pisang-goreng.html" title="Pisang Goreng">Pisang Goreng</a></h2><br>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/IkaFitrianingsih/ikafitrianingsih.github.io/master/33.jpg">
-           <h2><a href="https://us.louisvuitton.com/eng-us/point-of-sale/indonesia/louis-vuitton-jakarta-plaza-indonesia" title="Louis Vuitton">Louis Vuitton</a></h2><br>
+          <img src="https://raw.githubusercontent.com/Delvira18610042/Delvira-Salsabilla-Milania/master/piscok.jpg">
+           <h2><a href="Pisang Coklat" title="Pisang Coklat">Pisang Coklat</a></h2><br>
         </div>
       </div>
       
