--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Delvira18610042/Delvira-Salsabilla-Milania/master/piscok.jpg">
-           <h2><a href="Pisang Coklat" title="Pisang Coklat">Pisang Coklat</a></h2><br>
+           <h2><a href="https://resepkoki.id/resep/resep-pisang-coklat/" title="Pisang Coklat">Pisang Coklat</a></h2><br>
         </div>
       </div>
       
